# moos-ivp-arcturus

./: .gitignore  CMakeLists.txt  README.md
.svn/: wc.db
examples/: db_and_uxms.moos  pxrelay.moos  pxrelay_test.moos  utscript.moos
images/: boat_house.info  boat_house.tif  magazine_beach.info  magazine_beach.tif  sydney.info  sydney.tif
include/lib_gateway_protobuf/: gateway.pb.cc  gateway.pb.h
labs/: .LastOpenedMOOSLogDirectory  db_and_uxms.moos  myscript  pxrelay.moos  utscript.moos
labs/MOOSLog_16_10_2022_____10_38_43/: MOOSLog_16_10_2022_____10_38_43._moos  MOOSLog_16_10_2022_____10_38_43.alog  MOOSLog_16_10_2022_____10_38_43.ylog
labs/MOOSLog_26_11_2022_____13_07_44/: MOOSLog_26_11_2022_____13_07_44._moos  MOOSLog_26_11_2022_____13_07_44.alog  MOOSLog_26_11_2022_____13_07_44.ylog
lib/: libgateway_tcp.so.
log/: latest_list
missions/: README.md
missions/alder/: alder.bhv  alder.moos  alder_lab4.bhv  alder_lab4.moos  alder_lab4.moos++
missions/all_seaing/: all_seaing.bhv  all_seaing.moos  launch.sh  launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
missions/alpha/: alpha.bhv  alpha.moos
missions/alpha_gateway/: alpha.bhv  alpha.moos  launch.sh
missions/antares/: antares.moos  launch.sh
missions/arcturus/: arcturus.bhv  arcturus.moos  launch.sh
missions/beta/: beta.bhv  beta.moos  launch.sh
missions/bravo_loiter/: bravo.bhv  bravo.moos
missions/common_bhvs/: plug_BHV_AvoidObstacle.bhv  plug_BHV_Waypoint.bhv
missions/common_plugs/: plug_iMOOSGateway.moos  plug_iMOOSGatewayShore.moos  plug_origin_warp_boat_house.moos  plug_origin_warp_sydney_regatta.moos  plug_pHelmIvP.moos  plug_pLogger.moos  plug_pMarinePID.moos  plug_pMarineViewer.moos  plug_pNodeReporter.moos  plug_pObstacleMgr.moos  plug_pParseGateway.moos  plug_pShare.moos  plug_uFldMessageHandler  plug_uProcessWatch.moos
missions/gateway/: alpha.bhv  alpha.moos
missions/moos-gateway-alpha/: alpha.bhv  alpha.moos  alpha.moos++  gateway_alpha.moos
missions/stationkeeping/: alpha.bhv  stationkeeping.moos
missions/test_share/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
missions/testing_sp/: launch_shoreside.sh  launch_vehicle.sh  meta_shoreside.moos  meta_vehicle.moos
missions/vrx_2023/: launch_vehicle.sh  meta_vehicle.bhv  meta_vehicle.moos
missions/vrx_2023/acoustic_perception/: acoustic_perception.bhv  acoustic_perception.moos  launch.sh
missions/vrx_2023/acoustic_tracking/: acoustic_tracking.bhv  acoustic_tracking.moos  launch.sh
missions/vrx_2023/master/: launch.sh  wamv.bhv  wamv.moos
missions/vrx_2023/stationkeeping/: launch.sh  stationkeeping.bhv  stationkeeping.moos
missions/vrx_2023/wayfinding/: launch.sh  wayfinding.bhv  wayfinding.moos
missions/vrx_2023/wildlife/: launch.sh  wildlife.bhv  wildlife.moos
src/: CMakeLists.txt
src/allseaing_programs/iGazeboVessel/: CMakeLists.txt  main.cpp
src/allseaing_programs/pOdometry/: Odometry.h
src/allseaing_programs/pParseGateway/: ParseGateway.cpp  ParseGateway_Info.cpp
src/allseaing_programs/pParseGoal/: CMakeLists.txt  ParseGoal.cpp  ParseGoal.h  ParseGoal_Info.h  pParseGoal.moos
src/allseaing_programs/pParseWaypoint/: CMakeLists.txt
src/allseaing_programs/pStationKeeping/: CMakeLists.txt  StationKeeping.cpp  StationKeeping.h  StationKeeping_Info.cpp  main.cpp  pStationKeeping.moos
src/iGazeboVessel/: GazeboVessel.cpp  GazeboVessel.h  GazeboVessel_Info.cpp  GazeboVessel_Info.h  Thruster.cpp  Thruster.h  iGazeboVessel.moos
src/iMOOSGateway/: MOOSGateway.cpp
src/pOdometry/: CMakeLists.txt  Odometry.cpp  Odometry.h  Odometry_Info.cpp  Odometry_Info.h  main.cpp
src/pParseGateway/: CMakeLists.txt  ParseGateway.cpp  ParseGateway.h  ParseGateway_Info.h  main.cpp  pParseGateway.moos
src/pParseGoal/: ParseGoal.cpp  ParseGoal_Info.cpp  main.cpp
src/pParseWaypoint/: ParseWaypoint.cpp  ParseWaypoint.h  ParseWaypoint_Info.cpp  ParseWaypoint_Info.h  main.cpp  pParseWaypoint.moos
src/pPoseKeep/: PoseKeep.cpp
src/pSequence/: CMakeLists.txt  Sequence.cpp  Sequence.h  Sequence_Info.cpp  Sequence_Info.h  main.cpp  pSequence.moos
src/pStationKeeping/: StationKeeping.cpp  StationKeeping.h  StationKeeping_Info.h
src/pXRelayTest/: Relayer.cpp  Relayer.h
src/vrx_2023/pCircleAnimal/: CMakeLists.txt  CircleAnimal.cpp  CircleAnimal.h  CircleAnimal_Info.cpp  CircleAnimal_Info.h  main.cpp  pCircleAnimal.moos
